Added DatePickerDialog to Add Listing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="password_hint">Password</string>
     <string name="login_prompt">Already have an account?</string>
     <string name="item_hint">Item</string>
-    <string name="item_expiration_hint">Expiration Date MM/DD/YY</string>
+    <string name="item_expiration_hint">Choose Expiration Date</string>
     <string name="new_listing_title">Add a new listing!</string>
     <string name="submit_listing_btn">Submit</string>
     <string name="logo_content">green giveall logo with smiley face in g</string>
