--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,10 +26,25 @@
     <string name="people_number">0</string>
     <string name="profile_water">Water saved (L)</string>
     <string name="water_number">0</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="user_name">Messenger username</string>
+    <string name="receiver_msgs">Receiever messages here</string>
+    <string name="sender_msgs">Sender messages here</string>
+    <string name="message_here">Type message here…</string>
 
 
-    <string name="title_activity_home_page">MainActivity</string>
+    <string name="title_activity_home_page">HomePageActivity</string>
     <string name="title_home">Home</string>
     <string name="title_add_listing">Add Listing</string>
     <string name="title_profile">Profile</string>
+    <string name="title_messages">Messages</string>
+    <string name="title_activity_message">MessageActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
