--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,10 @@
     <string name="receiver_msgs">Receiever messages here</string>
     <string name="sender_msgs">Sender messages here</string>
     <string name="message_here">Type message here…</string>
+    <string name="username">Username</string>
+    <string name="set_address">Pickup address</string>
+    <string name="settings_button">Update</string>
+    <string name="settings">Settings</string>
 
 
     <string name="title_activity_home_page">HomePageActivity</string>
